--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -43,13 +43,13 @@
 
               <div class="form-group row my-3 p-3">
                 <label for="id_group">
-                  Группа
+                  {{ form.group.label }}
                 </label>
                 <label for="id_group">
                   {{ form.group }}
                 </label>
                 <small id="id_group-help" class="form-text text-muted">
-                  Группа, к которой будет относиться пост
+                  {{ form.group.help_text }}
                 </small>
               </div>
               <div class="d-flex justify-content-end">
