--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,1 +1,2 @@
-<p align="center">© {{year}} Copyright <br> <span style="color:red">Ya</span>tube</p>
+<p align="center">© {{year}} Copyright <br> 
+    <span style="color:red">Ya</span>tube</p>
