--- a/yatube/templates/includes/post3.html
+++ b/yatube/templates/includes/post3.html
@@ -6,8 +6,10 @@
     </ul>
     <p>{{ post.text|linebreaksbr }}</p>
     {% if post.group %}
-    <p><a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a><br>
-    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a></p>
+    <p><a href="{% url 'posts:post_detail' post.pk %}">
+      подробная информация </a><br>
+    <a href="{% url 'posts:group_list' post.group.slug %}">
+      все записи группы</a></p>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
 </article>
