--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}
+Создание поста
+{% endblock %}
+
 {% if is_edit %}
   Редактировать запись
 {% else %}
   Добавить запись
 {% endif %}
-{% endblock %}
+
 {% load user_filters %}
 {% block content %}
   <div class="container py-5">
@@ -24,24 +27,23 @@
               {% include 'includes/error.html' %}
             {% endif %}
             {% if is_edit %}
-                <form action="{% url 'posts:post_edit' post_id %}"
-                  method="post" enctype="multipart/form-data">
-              {% else %}
-                <form action="{% url 'posts:post_create' %}"
-                  method="post" enctype="multipart/form-data">
-                  {% endif %}
-              {% csrf_token %}
-                  {% for field in form %}
-                    {% include 'includes/fields.html' %}
-                  {% endfor %}
-                <textarea name="text" cols="40" rows="10" class="form-control" required id="id_text" {{ form.text }}>
-                </textarea>
-
-                <small id="id_text-help" class="form-text text-muted">
-                  Текст нового поста
-                </small>
+            <form action="{% url 'posts:post_edit' post_id %}"
+                  method="post" enctype="multipart/form-data"></form>
+            {% else %}
+            <form action="{% url 'posts:post_create' %}"
+                  method="post" enctype="multipart/form-data"></form>
+            {% endif %}
+            {% csrf_token %}
+            {% for field in form %}
+              {% include 'includes/fields.html' %}
+            {% endfor %}
+            <textarea name="text" cols="40" rows="10"
+                      class="form-control" required id="id_text" {{ form.text }}>
+            </textarea>
+            <small id="id_text-help" class="form-text text-muted">
+              Текст нового поста
+            </small>
               </div>
-
               <div class="form-group row my-3 p-3">
                 <label for="id_group">
                   {{ form.group.label }}
@@ -54,7 +56,6 @@
                 </small>
               </div>
               <div class="d-flex justify-content-end">
-
                 <button type="submit" class="btn btn-primary">
                   {% if is_edit %}
                   Сохранить изменения
