--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}   
 {% block title %}
-  <title> {{title}} </title>
+{{ group.title }}
 {% endblock %}
   
 {% block content %}
