--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}   
-  {% block title %}
-    <title>{{ title }}</title>
-  {% endblock %}
+{% block title %}
+{{ title }}
+{% endblock %}
 {% block content %}
 
 <div class="container py-5">     
