--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-<title> Пост {{ post.text|truncatechars:30 }} </title>
+Пост {{ post.text|truncatechars:30 }}
 {% endblock %}
 
 {% block content %}
@@ -18,10 +18,10 @@
             </li>
             </li>
             <li class="list-group-item">
-              Автор: {{ author.first_name }} {{ author.last_name }}
+              Автор: {{ post.author.first_name }} {{ post.author.last_name }}
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span >{{ author.posts.count }} </span>
+              Всего постов автора:  <span >{{ post.author.posts.count }} </span>
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author %}">
