--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-<title> Профайл пользователя {{author.get_full_name}} </title>
+Профайл пользователя {{author.get_full_name}}
 {% endblock %}
 {% block content %}
 <h1>Все посты пользователя {{ author.get_full_name }} </h1>
