--- a/yatube/templates/includes/fields.html
+++ b/yatube/templates/includes/fields.html
@@ -1,21 +1,15 @@
 <div class="form-group row my-3 p-3">
-    {% if field.field.required %}
-        aria-required="true"
-    {% else %}
-        aria-required="false"
-    {% endif %}
     <label for="{{ field.id_for_label }}">
         {{ field.label }}
         {% if field.field.required %}
         <span class="required text-danger">*</span>
         {% endif %}
     </label>
-    <div>
-        {% if field.help_text %}
+    {{ field }}
+    {% if field.help_text %}
         <small id="{{ field.id_for_label }}-help" 
         class="form-text text-muted">
             {{ field.help_text|safe }}
         </small>
-        {% endif %}
-    </div>
+    {% endif %}
 </div>
